syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "permission/service/v1/permission.proto";

// User token payload
message UserTokenPayload {
  uint32 user_id = 1 [
    json_name = "uid",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  optional uint32 tenant_id = 2 [
    json_name = "tid",
    (gnostic.openapi.v3.property) = {
      description: "Tenant ID"
    }
  ]; // Tenant ID

  optional string client_id = 3 [
    json_name = "cid",
    (gnostic.openapi.v3.property) = {
      description: "Client ID"
    }
  ]; // Client ID

  optional string device_id = 4 [
    json_name = "did",
    (gnostic.openapi.v3.property) = {
      description: "Device ID"
    }
  ]; // Device ID

  optional string username = 5 [
    json_name = "sub",
    (gnostic.openapi.v3.property) = {
      description: "Username"
    }
  ]; // Username

  repeated string roles = 10 [
    json_name = "roc",
    (gnostic.openapi.v3.property) = {
      description: "User role code list"
    }
  ]; // User role code list

  optional permission.service.v1.DataScope data_scope = 11 [
    json_name = "ds",
    (gnostic.openapi.v3.property) = {
      description: "Data permission scope"
    }
  ]; // Data permission scope

  optional uint32 org_unit_id = 12 [
    json_name = "ouid",
    (gnostic.openapi.v3.property) = {
      description: "Current organization unit ID"
    }
  ]; // Current organization unit ID

//  optional bool is_platform_admin = 20 [
//    json_name = "pad",
//    (gnostic.openapi.v3.property) = {
//      description: "Whether platform administrator"
//    }
//  ]; // Whether platform administrator
//
//  optional bool is_tenant_admin = 21 [
//    json_name = "tad",
//    (gnostic.openapi.v3.property) = {
//      description: "Whether tenant administrator (only effective when tenant_id is not 0)"
//    }
//  ]; // Whether tenant administrator (only effective when tenant_id is not 0)
}
